[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/CameraSetup.gd" type="Script" id=1]
[ext_resource path="res://Images/GodotIcon.png" type="Texture" id=2]
[ext_resource path="res://Images/CrossHair.png" type="Texture" id=3]
[ext_resource path="res://Scripts/CameraSetupGUI.gd" type="Script" id=4]

[sub_resource type="PrismMesh" id=1]

[node name="CameraSetup" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.19209e-07, 0 )
script = ExtResource( 1 )

[node name="CameraRoot" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="CameraRoot"]
transform = Transform( -4.37114e-08, 0, -7.32832, 0, 1, 0, 1, 0, -3.20331e-07, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="CameraParent" type="Spatial" parent="CameraRoot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30, 20.0772 )

[node name="Camera" type="Camera" parent="CameraRoot/CameraParent"]
transform = Transform( 1, 0, 0, 0, 0.290301, 0.956935, 0, -0.956935, 0.290301, 0, 0, 0 )
far = 10000.0

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
CameraSetupNodePath = NodePath("..")

[node name="GodotIcon" type="Sprite" parent="GUI"]
position = Vector2( 40.6487, 38.7141 )
scale = Vector2( 0.0429914, 0.0429914 )
texture = ExtResource( 2 )

[node name="TempCursor" type="Sprite" parent="GUI"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="CloseButton" type="Button" parent="GUI"]
margin_left = 21.0
margin_top = 559.0
margin_right = 115.0
margin_bottom = 585.0
text = "CLOSE GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="GUI"]
margin_left = 126.562
margin_top = 559.0
margin_right = 220.562
margin_bottom = 585.0
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}
